# manual_lidar_camera_calibration

./: CMakeLists.txt  README.md  package.xml
config/: camera_params.yaml
include/manual_lidar_camera_calibration/: pointcloud_loader.hpp
launch/: camera_points_publisher.launch.xml  extrinsic_calibrator.launch.xml  lidar_camera_calibration.rviz  pointcloud_loader.launch.xml
scripts/: camera_intrinsics_calib.py  camera_points_publisher.py  extrinsic_calibrator.py  extrinsic_compute.py
src/: pointcloud_loader.cpp  pointcloud_loader_node.cpp
